# pyqt5-modular-app

./: README.md  pyproject.toml  requirements.txt
controllers/: main_controller.py
services/: settings_service.py
ui/: QtDesigner2py.txt
utils/: logger.py
views/: main_window.py
